Added embedded image to markdown section

--- a/Jupyer Notebook Shortcuts.ipynb
+++ b/Jupyer Notebook Shortcuts.ipynb
@@ -151,6 +151,8 @@
     "\n",
     "* ```[text](url)``` to create a hyperlink [like this](https://unsplash.com/photos/ZlFKIG6dApg)\n",
     "\n",
+    "* ```![image info](filepath)``` to embed an image in markdown\n",
+    "\n",
     "\n"
    ]
   },
