Update Jupyer Notebook Shortcuts.ipynb
Fixed a typo

--- a/Jupyer Notebook Shortcuts.ipynb
+++ b/Jupyer Notebook Shortcuts.ipynb
@@ -47,7 +47,7 @@
     "\n",
     "* `Up` select cell above\n",
     "\n",
-    "* `Down` selectc cell below\n",
+    "* `Down` select cell below\n",
     "\n",
     "* `Shift + Up` extend selected cells above\n",
     "\n",
