Running notebook edits

--- a/Running.ipynb
+++ b/Running.ipynb
@@ -15,11 +15,15 @@
     "- Garmin - [https://www.garmin.com/en-US/account/datamanagement/exportdata/](https://www.garmin.com/en-US/account/datamanagement/exportdata/)\n",
     "- Strava - [https://www.strava.com/athlete/delete_your_account](https://www.strava.com/athlete/delete_your_account) (don't be scared by the page name)\n",
     "\n",
-    "These need to be compiled so these requests can take a while. They both send a link to your email address for you to retrieve the data. For me, Strava took about 5 mins, Garmin took about 20 mins.\n",
+    "These need to be compiled so these requests can take a while. They both send a link to your email address for you to retrieve the data. For me, Strava took about 5 mins, Garmin took about 20 mins. After having a quick look through both folders, Strava seems a lot more intuitive to understand, so for now I'll focus on files from there.\n",
     "\n",
     "## File types\n",
     "\n",
-    "There are several file types across "
+    "There are several file types across the folders=\n",
+    "\n",
+    "- `csv` - the activites summary is in this format\n",
+    "- `gpx` - routes and some activities are stored as this\n",
+    "- `gz` - most of the activities are in this format"
    ]
   }
  ],
