Very small example of linking scripts

--- a/Working with folders.ipynb
+++ b/Working with folders.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "polish-duration",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "decreased-stage",
    "metadata": {},
@@ -14,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "written-mississippi",
    "metadata": {},
    "outputs": [
@@ -24,7 +32,7 @@
        "'C:\\\\Users\\\\ptudor\\\\Documents\\\\GitHub\\\\python-basics'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,6 +304,7 @@
     }
    ],
    "source": [
+    "# **/ allows for nabigation of multiple directory levels\n",
     "for file in glob.iglob('**/*.txt', recursive = True):\n",
     "    print(file)"
    ]
@@ -595,33 +604,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fifth-waters",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# not using pandas\n",
-    "\n",
-    "# identify the directory\n",
-    "my_directory = os.getcwd()\n",
-    "\n",
-    "# create an empty list for file names\n",
-    "my_files = []\n",
-    "\n",
-    "# add files of interest to the list\n",
-    "for dirpath, dirnames, files in os.walk(my_directory):\n",
-    "    for file_name in files:\n",
-    "        if fnmatch.fnmatch(file_name, 'weights*.txt'):\n",
-    "            my_file = dirpath + '\\\\' + file_name\n",
-    "            my_files.append(my_file)\n",
-    "\n",
-    "# print(my_files)\n",
-    "\n",
-    "cols = ['Date', 'PersonID', 'FirstName', 'Age', 'Weight']\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 76,
    "id": "deadly-elimination",
    "metadata": {},
@@ -891,11 +873,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "metropolitan-chicago",
+   "execution_count": 19,
+   "id": "fifth-waters",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# not using pandas - this writes a new file compiled from individual datasets\n",
+    "\n",
+    "import os\n",
+    "import glob\n",
+    "import fnmatch\n",
+    "\n",
+    "# identify the directory\n",
+    "my_directory = os.getcwd()\n",
+    "\n",
+    "# create an empty list for file names\n",
+    "my_files = []\n",
+    "\n",
+    "# add files of interest to the list\n",
+    "for dirpath, dirnames, files in os.walk(my_directory):\n",
+    "    for file_name in files:\n",
+    "        if fnmatch.fnmatch(file_name, 'weights*.txt'):\n",
+    "            my_file = dirpath + '\\\\' + file_name\n",
+    "            my_files.append(my_file)\n",
+    "\n",
+    "cols = ['Date', 'PersonID', 'FirstName', 'Age', 'Weight']\n",
+    "with open(\"weights_alldays.txt\", \"w\") as out:\n",
+    "    # join the column names together with a comma between and then start a new line\n",
+    "    # \"%s\" % - substitutes in the joined columns with commas \n",
+    "    out.write(\"%s\\n\" % \"|\".join(cols))\n",
+    "    for file in my_files:\n",
+    "        with open(file) as f:\n",
+    "            for idx, line in enumerate(f):\n",
+    "                if idx > 0:\n",
+    "                    out.write(line)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "metropolitan-chicago",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File removed!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# remove file (optional)\n",
+    "\n",
+    "# check if the file exists\n",
+    "if os.path.exists('weights_alldays.txt'):\n",
+    "    # delete the file if so -\n",
+    "    os.remove('weights_alldays.txt')\n",
+    "    print(\"File removed!\")\n",
+    "else:\n",
+    "    # return some really helpful text\n",
+    "    print(\"Nope! This file doesn't exist!\")"
+   ]
   }
  ],
  "metadata": {
