Loads of changes and additions

--- a/notebooks/Anaconda Prompt and Environments.ipynb
+++ b/notebooks/Anaconda Prompt and Environments.ipynb
@@ -35,7 +35,7 @@
     "\n",
     "The current environment is shown in `()` brackets at the beginning of the command line - \n",
     "\n",
-    "![current environment](pictures-for-notebooks/current-environment.png)\n",
+    "![current environment](../data/pictures-for-notebooks/current-environment.png)\n",
     "\n",
     "To deactivate an environment, type\n",
     "```\n",
