--- a/notebooks/Opening, reading and writing files.ipynb
+++ b/notebooks/Opening, reading and writing files.ipynb
@@ -43,12 +43,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "dimensional-crime",
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_first_file = open(file = 'test-folder-with-csv-files/weights-2020-01-01.txt', \n",
+    "my_first_file = open(file = '../data/test-folder-with-csv-files/weights-2020-01-01.txt', \n",
     "                     mode = 'r+')"
    ]
   },
@@ -95,7 +95,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('test-folder-with-csv-files/weights-2020-01-01.txt', 'r+') as my_file:\n",
+    "with open('../data/test-folder-with-csv-files/weights-2020-01-01.txt', 'r+') as my_file:\n",
     "    my_file.read()"
    ]
   },
@@ -130,7 +130,7 @@
     }
    ],
    "source": [
-    "with open('test-folder-with-csv-files/weights-2020-01-01.txt', 'r+') as my_file:\n",
+    "with open('../data/test-folder-with-csv-files/weights-2020-01-01.txt', 'r+') as my_file:\n",
     "    print(\"The file name: \", my_file)\n",
     "    line = my_file.read()\n",
     "    print(line)"
@@ -152,7 +152,7 @@
     }
    ],
    "source": [
-    "with open('test-folder-with-csv-files/weights-2020-01-01.txt', 'r+') as my_file:\n",
+    "with open('../data/test-folder-with-csv-files/weights-2020-01-01.txt', 'r+') as my_file:\n",
     "    print(\"The file name: \", my_file)\n",
     "    line = my_file.read(8) # limit size of what is read\n",
     "    print(line)"
@@ -185,7 +185,7 @@
     }
    ],
    "source": [
-    "with open('test-folder-with-csv-files/weights-2020-01-01.txt', 'r+') as my_file:\n",
+    "with open('../data/test-folder-with-csv-files/weights-2020-01-01.txt', 'r+') as my_file:\n",
     "    print(\"The file name: \", my_file)\n",
     "    print(my_file.readline())\n",
     "    # print(my_file.readline()) # use multiple times to call more lines"
@@ -214,7 +214,7 @@
     }
    ],
    "source": [
-    "with open('test-folder-with-csv-files/weights-2020-01-01.txt', 'r+') as my_file:\n",
+    "with open('../data/test-folder-with-csv-files/weights-2020-01-01.txt', 'r+') as my_file:\n",
     "    print(my_file.readlines())"
    ]
   },
@@ -254,7 +254,7 @@
     }
    ],
    "source": [
-    "with open('test-folder-with-csv-files/weights-2020-01-01.txt', 'r+') as my_file:\n",
+    "with open('../data/test-folder-with-csv-files/weights-2020-01-01.txt', 'r+') as my_file:\n",
     "    for line in my_file: # for each element in the object\n",
     "        print(line)"
    ]
@@ -278,7 +278,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('test-folder-with-csv-files/weights-2020-01-01.txt', 'a+') as my_file:\n",
+    "with open('../data/test-folder-with-csv-files/weights-2020-01-01.txt', 'a+') as my_file:\n",
     "    my_file.write('2020-01-01|6|Jack|30|68\\n') # \\n - new line"
    ]
   },
@@ -328,13 +328,13 @@
    "outputs": [],
    "source": [
     "# open as read-only\n",
-    "with open('test-folder-with-csv-files/weights-2020-01-01.txt', 'r') as my_file:\n",
+    "with open('../data/test-folder-with-csv-files/weights-2020-01-01.txt', 'r') as my_file:\n",
     "    my_file_contents = my_file.readlines()\n",
     "    \n",
     "my_file_contents.insert(2, '2020-01-01|7|Barney|32|74\\n')\n",
     "\n",
     "# re-open in write-only mode to overwrite old file\n",
-    "with open('test-folder-with-csv-files/weights-2020-01-01.txt', 'w') as my_file:\n",
+    "with open('../data/test-folder-with-csv-files/weights-2020-01-01.txt', 'w') as my_file:\n",
     "    # join items together with nothing between them\n",
     "    my_fileContents = ''.join(my_file_contents) \n",
     "    my_file.write(my_fileContents)"
@@ -380,16 +380,16 @@
     "                '2020-01-01|7|Barney|32|74',\n",
     "                '2020-01-01|6|Jack|30|68']\n",
     "\n",
-    "with open('test-folder-with-csv-files/weights-2020-01-01.txt', 'r') as my_file:\n",
+    "with open('../data/test-folder-with-csv-files/weights-2020-01-01.txt', 'r') as my_file:\n",
     "    my_file_contents = my_file.readlines()\n",
     "\n",
-    "with open('test-folder-with-csv-files/weights-2020-01-01.txt', 'w') as my_file:\n",
+    "with open('../data/test-folder-with-csv-files/weights-2020-01-01.txt', 'w') as my_file:\n",
     "    for line in my_file_contents:\n",
     "        if line.strip(\"\\n\") not in values_to_rm:\n",
     "            my_file.write(line)\n",
     "            \n",
     "# check it has worked\n",
-    "with open('test-folder-with-csv-files/weights-2020-01-01.txt', 'r') as my_file:\n",
+    "with open('../data/test-folder-with-csv-files/weights-2020-01-01.txt', 'r') as my_file:\n",
     "    for line in my_file:\n",
     "        print(line)"
    ]
@@ -435,7 +435,7 @@
     }
    ],
    "source": [
-    "with open('test-folder-with-csv-files/weights-2020-01-01.txt') as txt_file:\n",
+    "with open('../data/test-folder-with-csv-files/weights-2020-01-01.txt') as txt_file:\n",
     "    csv_reader = csv.reader(txt_file, delimiter = '|') # bar delimited in our case\n",
     "    for row in csv_reader:\n",
     "        print(row)"
@@ -470,7 +470,7 @@
     }
    ],
    "source": [
-    "with open('test-folder-with-csv-files/weights-2020-01-01.txt') as txt_file:\n",
+    "with open('../data/test-folder-with-csv-files/weights-2020-01-01.txt') as txt_file:\n",
     "    csv_reader = csv.reader(txt_file, delimiter = '|')\n",
     "    line_count = 0\n",
     "    for row in csv_reader:\n",
@@ -518,7 +518,7 @@
     }
    ],
    "source": [
-    "with open('test-folder-with-csv-files/weights-2020-01-01.txt', mode = 'r') as txt_file:\n",
+    "with open('../data/test-folder-with-csv-files/weights-2020-01-01.txt', mode = 'r') as txt_file:\n",
     "    csv_reader = csv.DictReader(txt_file, delimiter = '|')\n",
     "    for row in csv_reader:\n",
     "        print(row)"
@@ -553,7 +553,7 @@
     }
    ],
    "source": [
-    "with open('test-folder-with-csv-files/weights-2020-01-01.txt', mode = 'r') as txt_file:\n",
+    "with open('../data/test-folder-with-csv-files/weights-2020-01-01.txt', mode = 'r') as txt_file:\n",
     "    csv_reader = csv.DictReader(txt_file, delimiter = '|')\n",
     "    line_count = 0\n",
     "    for row in csv_reader:\n",
@@ -582,7 +582,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('test-folder-with-csv-files/weights-2020-01-01.txt', mode = 'a+', newline = '') as weight_file:\n",
+    "with open('../data/test-folder-with-csv-files/weights-2020-01-01.txt', mode = 'a+', newline = '') as weight_file:\n",
     "    # newline = '' argument is required to stop csv.writer adding an extra line when .writerow() is used\n",
     "    weight_writer = csv.writer(weight_file, delimiter = '|', quotechar = '\"', quoting = csv.QUOTE_MINIMAL)\n",
     "    \n",
@@ -610,7 +610,7 @@
     }
    ],
    "source": [
-    "with open('test-folder-with-csv-files/weights-2020-01-01.txt', 'r+') as my_file:\n",
+    "with open('../data/test-folder-with-csv-files/weights-2020-01-01.txt', 'r+') as my_file:\n",
     "    line = my_file.read()\n",
     "    print(line)"
    ]
@@ -630,7 +630,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('test-folder-with-csv-files/weights-2020-01-01.txt', mode = 'w', newline = '') as weight_file:\n",
+    "with open('../data/test-folder-with-csv-files/weights-2020-01-01.txt', mode = 'w', newline = '') as weight_file:\n",
     "    fields = ['Day', 'PersonID', 'Name', 'Age', 'Weight'] # required when writing a dictionary\n",
     "    writer = csv.DictWriter(weight_file, fieldnames = fields, delimiter = '|')\n",
     "    \n",
@@ -684,7 +684,7 @@
     }
    ],
    "source": [
-    "testcsv = pd.read_csv('test-folder-with-csv-files/Weights-2020-01-01.txt', sep = '|')\n",
+    "testcsv = pd.read_csv('../data/test-folder-with-csv-files/Weights-2020-01-01.txt', sep = '|')\n",
     "print(testcsv)"
    ]
   },
@@ -721,7 +721,7 @@
     }
    ],
    "source": [
-    "testcsv = pd.read_csv('test-folder-with-csv-files/Weights-2020-01-01.txt', \n",
+    "testcsv = pd.read_csv('../data/test-folder-with-csv-files/Weights-2020-01-01.txt', \n",
     "                      sep = '|', \n",
     "                      index_col = 'PersonID', \n",
     "                      parse_dates = ['Day'])\n",
@@ -757,7 +757,7 @@
     }
    ],
    "source": [
-    "testcsv = pd.read_csv('test-folder-with-csv-files/Weights-2020-01-01.txt', \n",
+    "testcsv = pd.read_csv('../data/test-folder-with-csv-files/Weights-2020-01-01.txt', \n",
     "                      sep = '|', \n",
     "                      index_col = 'PersonID', \n",
     "                      parse_dates = ['Date'],\n",
@@ -782,7 +782,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "testcsv.to_csv('test-folder-with-csv-files/pandascsvfilewrite.csv')"
+    "testcsv.to_csv('../data/test-folder-with-csv-files/pandascsvfilewrite.csv')"
    ]
   },
   {
@@ -813,9 +813,9 @@
     "import os\n",
     "\n",
     "# check if the file exists\n",
-    "if os.path.exists('test-folder-with-csv-files/pandascsvfilewrite.csv'):\n",
+    "if os.path.exists('../data/test-folder-with-csv-files/pandascsvfilewrite.csv'):\n",
     "    # delete the file if so -\n",
-    "    os.remove('test-folder-with-csv-files/pandascsvfilewrite.csv')\n",
+    "    os.remove('../data/test-folder-with-csv-files/pandascsvfilewrite.csv')\n",
     "else:\n",
     "    # return some really helpful text\n",
     "    print(\"Nope! This file doesn't exist!\")"
@@ -824,9 +824,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python376jvsc74a57bd0a52aec97dc5fdc943310bda3429dc8e9f9521fc74ec7239c53840c0d02b56a20",
+   "display_name": "Python 3.7.6 64-bit ('ml': conda)"
   },
   "language_info": {
    "codemirror_mode": {
