--- a/notebooks/Working with folders.ipynb
+++ b/notebooks/Working with folders.ipynb
@@ -241,7 +241,7 @@
     "# more advanced example\n",
     "\n",
     "# use sub-directory for this example\n",
-    "my_subdir = 'C:\\\\Users\\\\ptudor\\\\Documents\\\\GitHub\\\\python-basics\\\\test-folder-with-csv-files'\n",
+    "my_subdir = 'C:\\\\Users\\\\ptudor\\\\Documents\\\\GitHub\\\\python-basics\\\\data\\\\test-folder-with-csv-files'\n",
     "\n",
     "for filename in os.listdir(my_subdir):\n",
     "    # '*' indicates any string between other values\n",
